--- a/book-store-webapp/pom.xml
+++ b/book-store-webapp/pom.xml
@@ -29,8 +29,12 @@
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>demo-infrastructure</artifactId>
+            <groupId>com.dspexpertise</groupId>
+            <artifactId>book-store-infrastructure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.dspexpertise</groupId>
+            <artifactId>book-store-domain</artifactId>
         </dependency>
     </dependencies>
 
