--- a/book-store-webapp/src/main/resources/application.properties
+++ b/book-store-webapp/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 cxf.jaxrs.component-scan=true
-cxf.jaxrs.classes-scan-packages= com.fasterxml.jackson.jaxrs.json
+cxf.jaxrs.classes-scan-packages=com.fasterxml.jackson.jaxrs.json
 cxf.path=/services
