--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <liquibase.version>3.5.3</liquibase.version>
         <postgresql.version>42.1.4</postgresql.version>
         <jackson.version>2.8.6</jackson.version>
-        <swagger-codegen.version>2.8.6</swagger-codegen.version>
+        <swagger-codegen.version>2.2.3</swagger-codegen.version>
         <swagger.version>1.5.16</swagger.version>
         <validation.version>1.1.0.Final</validation.version>
     </properties>
@@ -64,8 +64,13 @@
                 <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.example</groupId>
-                <artifactId>demo-infrastructure</artifactId>
+                <groupId>com.dspexpertise</groupId>
+                <artifactId>book-store-infrastructure</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dspexpertise</groupId>
+                <artifactId>book-store-domain</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
