--- a/book-store-infrastructure/pom.xml
+++ b/book-store-infrastructure/pom.xml
@@ -26,6 +26,10 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jaxrs</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-standalone</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
